fixed alert 5px jump, added jungle and FM dioramas, exterior and DFH slider photos.  extra slider photos for comparison

--- a/css/main.css
+++ b/css/main.css
@@ -939,6 +939,11 @@ a {
     height: 80px;
     width: 80px;
 }
+.item {
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
+}
 .item img {
     width: 100%;
 }
